--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+        vectorDrawables.useSupportLibrary = true
+        manifestPlaceholders = [pdftronLicenseKey:PDFTRON_LICENSE_KEY]
     }
 
     buildTypes {
@@ -43,4 +46,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.android.material:material:1.3.0-alpha02'
+    implementation "com.pdftron:pdftron:9.0.2"
+    implementation "com.pdftron:tools:9.0.2"
+
+    implementation 'androidx.multidex:multidex:2.0.1'
+
+    // ***** Optionally include the demo library ****
+    implementation "com.pdftron:demo:9.0.2"
 }
